# rs_colour_math

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
colour_math/: Cargo.toml
colour_math/src/: attributes.rs  beigui.rs  chroma.rs  debug.rs  fdrn.rs  hcv.rs  hcv_manipulator.rs  hue.rs  hue_ng.rs  image.rs  lib.rs  manipulator.rs  mixing.rs  proportion.rs  rgb.rs  rgb_ng.rs  rgba.rs  urgb.rs  urgba.rs
colour_math/src/attributes/: drawing.rs  hue_wheel.rs
colour_math/src/beigui/: attr_display.rs  hue_wheel.rs  test_beigui.rs
colour_math/src/fdrn/: fdrn_tests.rs
colour_math/src/hcv/: hcv_tests.rs
colour_math/src/hue/: angle.rs  hue_tests.rs
colour_math/src/manipulator/: manipulator_tests.rs
colour_math/src/proportion/: proportion_tests.rs
colour_math_cairo/: Cargo.toml
colour_math_cairo/src/: lib.rs
colour_math_cairo_ng/: Cargo.toml
colour_math_cairo_ng/src/: lib.rs
colour_math_derive/: Cargo.toml
colour_math_derive/src/: lib.rs
colour_math_gdk_pixbuf/: Cargo.toml
colour_math_gdk_pixbuf/src/: lib.rs
colour_math_gtk/: Cargo.toml
colour_math_gtk/src/: colour_edit.rs  hue_wheel.rs  lib.rs  manipulator.rs  rgb_entry.rs
colour_math_gtk_ng/: Cargo.toml
colour_math_gtk_ng/src/: colour_edit.rs  hue_wheel.rs  lib.rs  manipulator.rs  rgb_entry.rs
colour_math_ng/: Cargo.toml
colour_math_ng/src/: beigui.rs  fdrn.rs  hcv.rs  hue.rs  lib.rs  manipulator.rs  proportion.rs  rgb.rs
colour_math_ng/src/beigui/: attr_display.rs  display.rs  hue_wheel.rs  test_beigui.rs
colour_math_ng/src/fdrn/: fdrn_tests.rs
colour_math_ng/src/hcv/: hcv_tests.rs
colour_math_ng/src/hue/: angle.rs  hue_tests.rs
colour_math_ng/src/manipulator/: manipulator_tests.rs
colour_math_ng/src/proportion/: proportion_tests.rs
colour_math_real/: Cargo.toml
colour_math_real/src/: attributes.rs  debug.rs  fdrn.rs  hcv.rs  hue.rs  lib.rs  real.rs  rgb.rs
colour_math_real/src/fdrn/: fdrn_tests.rs
colour_math_real/src/hue/: angle.rs  hue_tests.rs
src/: chroma.rs  hue.rs  image.rs  lib.rs  manipulator.rs  rgb.rs
test_gdk_pixbuf/: Cargo.toml
test_gui_gtk/: Cargo.toml
test_gui_gtk/src/: main.rs
test_gui_gtk_ng/: Cargo.toml
test_gui_gtk_ng/src/: main.rs
