[package]
name = "colour_math"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
serde = "1.0"
serde_derive = "1.0"

# TODO: change normalised_angles dependency when it goes public
#normalised_angles = { git = "https://github.com/pwil3058/rs_normalised_angles.git" }
normalised_angles = { path = "../rs_normalised_angles.git" }
