[package]
name = "colour_math"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cargo.io crates
lazy_static = "1.4.0"
num-traits = "0.2.14"
regex = "1.4.3"
serde = "1.0"
serde_derive = "1.0"

# crates from my github account
num_traits_plus = { git = "https://github.com/pwil3058/rs_num_traits_plus.git" }
