[package]
name = "colour_math_cairo"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pw_gtk_ext = { git = "https://github.com/pwil3058/rs_pw_gix.git" }

colour_math = { path = "../colour_math" }
