[package]
name = "colour_math_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"

pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
num_traits_plus = { git = "https://github.com/pwil3058/rs_num_traits_plus.git" }

colour_math = { path = "../colour_math" }
colour_math_cairo = { path = "../colour_math_cairo" }
