[package]
name = "test_gui_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gtk_ext = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
#pw_gtk_ext = { path = "../../rs_pw_gix/pw_gtk_ext" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux" }

colour_math = { path = "../colour_math" }
colour_math_gtk = { path = "../colour_math_gtk" }
colour_math_derive = { path = "../colour_math_derive" }
