[package]
name = "test_gui_gtk_ng"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux" }

colour_math_ng = { path = "../colour_math_ng" }
colour_math_gtk_ng = { path = "../colour_math_gtk_ng" }
colour_math_derive = { path = "../colour_math_derive" }